<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Caracola</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="reserva_titulo_hacer_reserva">Hacer reserva</string>
    <string name="reserva_nota">Nota</string>
    <string name="booking_price">
        $<xliff:g example="25.00" id="price">%.2f</xliff:g> por noche
    </string>
    <string name="title_current_bookings">Reservas actuales</string>
    <string name="booking_number">Número de la reserva</string>
    <string name="title_edit_booking">Editar reserva</string>
    <string name="title_internal_services">Servicios</string>
    <string name="title_activity_settings">Preferencias</string>
    <string name="title_dialog_disponibilidad">Disponibles</string>
    <string name="pref_header_general">Ajustes generales</string>
    <string name="pref_title_is_high_season">Temporada alta</string>
    <string name="pref_description_is_high_season">Al activar se cargarán por defecto los precios para la temporada alta</string>
    <string name="pref_title_day_display_name">Días con antelación</string>
    <string name="pref_header_data_sync">Datos y sincronización</string>
    <string name="pref_header_notifications">Notificaciones</string>
    <string name="pref_title_is_enable_reminder">Recordatorio de reserva</string>
    <string name="pref_title_is_enable_reminder_description">Habilita el recordatorio de reserva</string>
    <string name="pref_title_is_day_reminder_description">Días con antelación para el recordatorio de reserva</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="bedroom_name">Nombre</string>
    <string name="price_low_season">Precio (temporada baja)</string>
    <string name="price_high_season">Precio (temporada alta)</string>
    <string name="bedroom_capacity">Capacidad (# de personas)</string>
    <string name="title_edit_bedroom">Editar habitación</string>
    <string name="title_insert_bedroom">Insertar habitación</string>
    <string name="person_full_name">
        <xliff:g example="Rainer" id="firstName">%s</xliff:g> <xliff:g example="Martínez Fraga" id="lastName">%s</xliff:g>
    </string>
    <string name="title_edit_client">Editar cliente</string>
    <string name="passport">Pasaporte</string>
    <string name="person_first_name">Nombre</string>
    <string name="person_last_name">Apellidos</string>
    <string name="birthday_form_label">Fecha de nacimiento</string>
    <string name="country">País</string>
    <string name="gender">Género</string>
    <string name="service_name">Nombre</string>
    <string name="price">Precio</string>
    <string name="title_edit_external_service">Editar servicio externo</string>
    <string name="booking_general_tab_title">Reserva</string>
    <string name="booking_clients_tab_title">Clientes</string>
    <string name="booking_consumption_tab_title">Consumo</string>
    <string name="amount">Cantidad</string>
    <string name="title_edit_consumption">Editar consumo</string>
    <string name="title_bedrooms">Habitaciones</string>
    <string name="title_edit_internal_service">Editar servicio</string>
    <string name="title_contacts">Agenda</string>
    <string name="title_settings">Configuración</string>
    <string name="yes_action_button">Sí</string>
    <string name="delete_confirmation_message">¿Realmente desea eliminar el elemento seleccionado?</string>
    <string name="cancel_action_button">Cancelar</string>
    <string name="service">Servicio</string>
    <string name="service_hint">[Seleccione un servicio]</string>
    <string name="error_select_service">Debe elegir un servicio</string>
    <string name="ok_action_button">Aceptar</string>
    <string name="contacts_services_tab_title">Servicios</string>
    <string name="contacts_all_tab_title">Contactos</string>
    <string name="title_suppliers">Contactos</string>
    <string name="title_edit_supplier">Editar contacto</string>
    <string name="supplier_name">Nombre</string>
    <string name="supplier_email">E-mail</string>
    <string name="supplier_address">Dirección</string>
    <string name="supplier_services">Servicios</string>
    <string name="app_email">caracola@polymitasoft.com</string>
    <string name="title_preferences">Preferencias</string>
    <string name="contact_info_tab_title">General</string>
    <string name="contact_services_tab_title">Servicios</string>
    <string name="booking_confirmed">Confirmada</string>
    <string name="booking_pending">Pendiente</string>
    <string name="supplier_phone1">Teléfono 1</string>
    <string name="supplier_phone2">Teléfono 2</string>
    <string name="supplier_service_edit_title">Editar servicio del proveedor</string>
    <string name="supplier_service_description">Descripción</string>
    <string name="check_in_confirmation_message">La reserva seleccionada aún no está en fecha de iniciarse. ¿Está seguro que desea inciar el proceso de registro de la reserva?</string>
    <string name="title_activity_supplier_service_info">Información</string>
    <string name="pref_title_enable_sms_notifications">Sincronización por SMS</string>
    <string name="pref_description_enable_sms_notifications">Habilita el envío de SMS a los gestores definidos para sincronizar el calendario de reservas.</string>
    <string name="title_export">Exportar</string>
    <string name="category_pref_booking">Recordatorio Reserva</string>
    <string name="category_pref_cliente">Recordatorio cumpleaños</string>
    <string name="pref_title_is_enable_reminder_description_birthday">Habilita el recordatorio de cumpleaños</string>
    <string name="pref_title_is_day_reminder_description_birthday">Días con antelación para el recordatorio de cumpleaños</string>
    <string name="pref_description_enable_sms_notifications_confirm">Habilita el envío de SMS para confirmar reserva.</string>
    <string name="pref_title_enable_sms_notifications_confirm">Confirmación por SMS</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_about">Información</string>
</resources>