<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_current_bookings"
            android:icon="@drawable/ic_menu_current_bookings"
            android:title="@string/title_current_bookings" />
        <item
            android:id="@+id/nav_internal_service"
            android:icon="@drawable/ic_menu_internal_services"
            android:title="@string/title_internal_services" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_contacts"
            android:title="@string/title_contacts" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_bedrooms"
            android:title="@string/title_bedrooms"/>
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_menu_export"
            android:title="@string/title_export"/>

        <item android:title="@string/title_settings">
            <menu>
                <item
                    android:id="@+id/nav_hostal"
                    android:icon="@drawable/ic_location_city_black_24dp"
                    android:title="Hostal" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_settings"
                    android:title="@string/title_preferences" />
            </menu>
        </item>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/title_about" />
    </group>
</menu>
