<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/text_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/supplier_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_name"
                android:inputType="textPersonName"
                android:text="@string/supplier_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_phone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/supplier_phone1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_phone1"
                android:inputType="phone"
                android:text=""/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_phone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/supplier_phone2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_phone2"
                android:inputType="phone"
                android:text=""/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/supplier_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_email"
                android:inputType="textEmailAddress"
                android:text="@string/supplier_email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/supplier_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/supplier_address"
                android:inputType="textPostalAddress"
                android:text="@string/supplier_address"/>
        </android.support.design.widget.TextInputLayout>

        <com.polymitasoft.caracola.view.supplier.SupplierServicesSelector
            android:id="@+id/supplier_services"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/supplier_services"/>

    </LinearLayout>

</ScrollView>