<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="16dp"
                  android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/amountText"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/person_first_name"
                      android:hint="@string/person_first_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/priceText"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/person_last_name"
                      android:hint="@string/person_last_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText android:id="@+id/dateText"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="date"
                      android:text="@string/birthday_form_label"
                      android:hint="@string/birthday_form_label"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</ScrollView>