<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingPrefix"
        android:padding="@dimen/text_margin">

        <TextView
            android:id="@+id/label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/label_vertical_margin"
            android:text="@string/supplier_name"/>

        <TextView
            android:id="@+id/supplier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_vertical_margin"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/label_phone1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/label_vertical_margin"
            android:text="@string/supplier_phone1"/>

        <LinearLayout
            android:id="@+id/layout_phone1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/supplier_phone1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"/>

            <ImageButton
                android:id="@+id/call_phone1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="?android:colorBackground"
                app:srcCompat="@drawable/ic_call_black_24dp"/>

            <ImageButton
                android:id="@+id/send_sms_phone1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="?android:colorBackground"
                app:srcCompat="@drawable/ic_textsms_black_24dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/label_phone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/label_vertical_margin"
            android:text="@string/supplier_phone2"/>

        <LinearLayout
            android:id="@+id/layout_phone2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/supplier_phone2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"/>

            <ImageButton
                android:id="@+id/call_phone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="?android:colorBackground"
                app:srcCompat="@drawable/ic_call_black_24dp"/>

            <ImageButton
                android:id="@+id/send_sms_phone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="?android:colorBackground"
                app:srcCompat="@drawable/ic_textsms_black_24dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/label_vertical_margin"
            android:text="@string/supplier_email"/>

        <LinearLayout
            android:id="@+id/layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_vertical_margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/supplier_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/black"/>

            <ImageButton
                android:id="@+id/send_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="?android:colorBackground"
                app:srcCompat="@drawable/ic_mail_black_24dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/label_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/label_vertical_margin"
            android:text="@string/supplier_address"/>

        <TextView
            android:id="@+id/supplier_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_vertical_margin"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/supplier_service_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/description_vertical_margin"
            android:layout_marginTop="@dimen/description_vertical_margin"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black"/>
    </LinearLayout>

</ScrollView>